fix: fix biodata and contact form overflow on mobile screens

--- a/HTML Task 3/style.css
+++ b/HTML Task 3/style.css
@@ -438,6 +438,23 @@ footer p {
         font-size: .9rem;
     }
 
+    .biodata-content {
+        max-width: 95%;
+        padding: 15px 12px 0;
+    }
+
+    .biodata-content div h3 {
+        font-size: .8rem;
+    }
+
+    .biodata-content div i {
+        font-size: 1.4rem;
+    }
+
+    .form {
+        width: 80%;
+    }
+
     .project-text_container {
         padding: 50px 0 20px;
     }
